--- a/frontend/core/src/main/webapp/static/app/root/root.html
+++ b/frontend/core/src/main/webapp/static/app/root/root.html
@@ -1,3 +1,1 @@
-<div id="root-container">
-  <div id="root" ng-view editable-field-backdrop></div>
-</div>
+<div class="container-root" ng-view editable-field-backdrop></div>
