--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -87,6 +87,7 @@
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
+  <script src="static/app/base/verticalResizeDirective.js"></script>
 
   <script src="static/app/account/AccountController.js"></script>
   <script src="static/app/account/AccountService.js"></script>
