Banner logo size and positioning. LESS variable renaming, and commenting.

--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -13,7 +13,7 @@
       </div>
 
       <header class="container-banner row">
-        <span id="entryBannerLogo" class="icon-logo-with-text"></span>
+        <span id="entryBannerLogo" class="icon-logo-with-text text-banner"></span>
       </header>
 
       <div class="swiper-container container-content--outer" swiper-container="entry" swiper-type="main" expected-slides="(!entryState && 2) || (entryState === 'login' && 3)">
