Vertical resize in editor:  * removed vertical-resize directive from container-main and added it to container-editor  * only change translate3d and max-height, no top, properties when soft keyboard opens and closes since container-editor is absolutely positioned and has top set in LESS  * center vertically as well

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,4 +1,4 @@
-<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right">
+<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize="editor">
   <div ng-if="editorVisible" class="container-fluid">
     <header class="container-titlebar">
       <div class="group-navigation">
@@ -9,7 +9,7 @@
           <input type="checkbox" ng-model="task.completed" icon-checkbox="editorTitlebarCheckbox" />
         </div>
         <div class="group-mixed--middle">
-          <textarea ng-click="DEBUG_openSoftKeyboardTemplate()" type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
+          <textarea ng-click="DEBUG_openKeyboard()" type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
         </div>
         <div ng-if="titlebarHasText()" class="group-mixed--right">
           <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
@@ -33,14 +33,7 @@
     </header>
 
     <div ng-if="!editorHasSwiper" class="container-content--outer" ng-style="{'padding-bottom': getFooterHeight()}">
-      <div class="container-content" ng-click="DEBUG_closeSoftKeyboardTemplate()">
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+      <div class="container-content" ng-click="DEBUG_toggleKeyboard()">
       </div>
       <div class="container-content--after" ng-style="{height: getFooterHeight()}">footer</div>
     </div>
@@ -49,7 +42,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide" swiper-slide="{{editorType}}/basic" slide-index="0">
 
-          <div ng-if="editorType === 'task'" class="container-content" ng-click="DEBUG_closeSoftKeyboardTemplate()">
+          <div ng-if="editorType === 'task'" class="container-content" ng-click="DEBUG_toggleKeyboard()">
             <div ng-hide="snoozeOpen || calendarOpen">
               <div class="row" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
               <div lists-select-options>
