--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,4 +1,4 @@
-<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize="editor">
+<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize>
   <div ng-if="editorVisible" class="container-fluid">
     <header class="container-titlebar">
       <div class="group-navigation">
@@ -9,7 +9,7 @@
           <input type="checkbox" ng-model="task.completed" icon-checkbox="editorTitlebarCheckbox" />
         </div>
         <div class="group-mixed--middle">
-          <textarea ng-click="DEBUG_openKeyboard()" type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
+          <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
         </div>
         <div ng-if="titlebarHasText()" class="group-mixed--right">
           <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
@@ -32,17 +32,17 @@
       </div>
     </header>
 
-    <div ng-if="!editorHasSwiper" class="container-content--outer" ng-style="{'padding-bottom': getFooterHeight()}">
-      <div class="container-content" ng-click="DEBUG_toggleKeyboard()">
+    <div ng-if="!editorHasSwiper" class="container-content--outer" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}">
+      <div class="container-content">
       </div>
-      <div class="container-content--after" ng-style="{height: getFooterHeight()}">footer</div>
+      <div class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight()}">footer</div>
     </div>
 
-    <div ng-if="editorHasSwiper" class="swiper-container container-content--outer" ng-style="{'padding-bottom': getFooterHeight()}" swiper-container="{{editorType}}" swiper-type="editor" expected-slides="2">
+    <div ng-if="editorHasSwiper" class="swiper-container container-content--outer" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}" swiper-container="{{editorType}}" swiper-type="editor" expected-slides="2">
       <div class="swiper-wrapper">
         <div class="swiper-slide" swiper-slide="{{editorType}}/basic" slide-index="0">
 
-          <div ng-if="editorType === 'task'" class="container-content" ng-click="DEBUG_toggleKeyboard()">
+          <div ng-if="editorType === 'task'" class="container-content">
             <div ng-hide="snoozeOpen || calendarOpen">
               <div class="row" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
               <div lists-select-options>
@@ -64,7 +64,7 @@
             <div ng-if="calendarOpen" class="pikaday-embedded" calendar="{{task.transientProperties.date}}" calendar-get-date-fn="registerGetCalendarDateFn(getCalendarDateFn)" calendar-set-default-date="true" calendar-destroy="closeCalendar()" bound="false"></div>
           </div>
 
-          <footer class="container-content--after" ng-style="{height: getFooterHeight(), bottom: -getFooterHeight()}">
+          <footer class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight(), bottom: -getOverrideEditorFooterHeight()}">
             <div class="group-btn">
               <button type="button" class="btn-delete">
                 <span class="text-btn">delete</span>
@@ -92,7 +92,7 @@
             </select>
             <input type="text" ng-model="task.link" placeholder="url...">
           </div>
-          <div class="container-content--after" ng-style="{height: getFooterHeight(), bottom: -getFooterHeight()}">footer</div>
+          <div class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight(), bottom: -getOverrideEditorFooterHeight()}">footer</div>
         </div>
       </div>
     </div>
