--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -23,8 +23,8 @@
 <div class="container-main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']" drawer="left">
   <div ng-include="'static/app/main/menu.html'" include-replace></div>
   <div ng-include="'static/app/main/editor.html'" include-replace></div>
-  <div drawer-aisle>
-    <div class="container-master">
+  <div drawer-aisle class="container-drawer-aisle">
+    <div class="container-master" vertical-resize>
       <div class="container-fluid" ng-class="[getFooterVisibilityClass(), isAisleWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling']" editable-field-backdrop>
         <header class="container-toolbar" ng-include="'static/app/main/staticPageHeader.html'"></header>
         <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
