--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -1,72 +1,64 @@
-<section class="two-column-grid page">
-  <div class="column">
-    <div class="page-content-container">
-      <div class="inner-page-content-container" scroll-to swiper-prevent>
-        <div ng-if="context" accordion>
-          <div accordion-title="context" edit-item="editContext(context)" edit-item-inline="true" edit-item-fields="editContextFields(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
-          <div ng-if="isOpen(context)" class="swiper-no-swiping" editable-field-container="auto">
-            <div>
-              <div item-core-fields="context" item-core-fields-details="contextDetails"></div>
-              <ul class="button-row">
-                <li class="button-container left-of-two">
-                  <button type="button" class="normal-button" ng-click="closeAndCall(context, contextQuickEditDone)">
-                    done
-                  </button>
-                </li>
-                <li class="button-container right-of-two">
-                  <button type="button" class="delete-button" ng-click="closeAndCall(context, deleteContextAndShowContexts)">
-                    delete
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div ng-repeat="task in tasks | itemsFilter:{name:'byTagUUID', filterBy: context.uuid}">
-            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" editable-field-container="auto">
-              <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-              <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
-            </div>
-          </div>
-          <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
-        </div>
-        <div ng-if="context === undefined" accordion>
-          <h3>no context</h3>
-          <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}">
-            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" editable-field-container="auto">
-              <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-              <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
-            </div>
-          </div>
-          <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
-        </div>
-        <div ng-if="context === null" accordion>
-          <h3>no list</h3>
-          <div ng-repeat="task in tasks | itemsFilter:{name:'noList'}">
-            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" editable-field-container="auto">
-              <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-              <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
-            </div>
-          </div>
-          <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
-        </div>
-        <div ng-if="context === 0" accordion>
-          <h3>no date</h3>
-          <div ng-repeat="task in tasks | itemsFilter:{name:'noDate'}">
-            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" editable-field-container="auto">
-              <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-              <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
-            </div>
-          </div>
-          <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
-        </div>
+<section class="container-content" scroll-to swiper-prevent>
+  <div ng-if="context" accordion>
+    <div accordion-title="context" edit-item="editContext(context)" edit-item-inline="true" edit-item-fields="editContextFields(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
+    <div ng-if="isOpen(context)" class="swiper-no-swiping" editable-field-container="auto">
+      <div>
+        <div item-core-fields="context" item-core-fields-details="contextDetails"></div>
+        <ul class="button-row">
+          <li class="button-container left-of-two">
+            <button type="button" class="normal-button" ng-click="closeAndCall(context, contextQuickEditDone)">
+              done
+            </button>
+          </li>
+          <li class="button-container right-of-two">
+            <button type="button" class="delete-button" ng-click="closeAndCall(context, deleteContextAndShowContexts)">
+              delete
+            </button>
+          </li>
+        </ul>
       </div>
     </div>
+    <div ng-repeat="task in tasks | itemsFilter:{name:'byTagUUID', filterBy: context.uuid}">
+      <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+      <div ng-if="isOpen(task)" editable-field-container="auto">
+        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
+        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+      </div>
+    </div>
+    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
   </div>
-  <aside class="column">
-    TODO
-  </aside>
+  <div ng-if="context === undefined" accordion>
+    <h3>no context</h3>
+    <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}">
+      <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+      <div ng-if="isOpen(task)" editable-field-container="auto">
+        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
+        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+      </div>
+    </div>
+    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
+  </div>
+  <div ng-if="context === null" accordion>
+    <h3>no list</h3>
+    <div ng-repeat="task in tasks | itemsFilter:{name:'noList'}">
+      <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+      <div ng-if="isOpen(task)" editable-field-container="auto">
+        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
+        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+      </div>
+    </div>
+    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
+  </div>
+  <div ng-if="context === 0" accordion>
+    <h3>no date</h3>
+    <div ng-repeat="task in tasks | itemsFilter:{name:'noDate'}">
+      <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+      <div ng-if="isOpen(task)" editable-field-container="auto">
+        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
+        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+      </div>
+    </div>
+    <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
+  </div>
 </section>
+<footer class="container-content--after">context</footer>
