--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -1,50 +1,40 @@
-<section class="two-column-grid page">
-  <div class="column">
-    <div class="page-content-container">
-      <div class="inner-page-content-container" scroll-to swiper-prevent>
-        <section ng-init="newContext={title:undefined, tagType:'context'}">
-          <h3>contexts</h3>
-          <ul>
-            <li ng-show="contexts.length" ng-repeat="context in contexts">
-              <a href class="click-to-slide" swiper-click="showContextDetails(context)">
-                <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
-              </a>
-            </li>
-            <li>
-              <form role="form" class="add-element" ng-submit="callAndRefresh(addContext, newContext)" add-item autocapitalize="none" autocorrect="off">
-                <div class="form-group" editable-field-container="disable">
-                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" editable-field placeholder="add context..."/>
-                </div>
-              </form>
-            </li>
-            <li ng-if="contexts.length === 0">
-              <div class="instruction-text">
-                <p class="instruction-text-chapter">contexts are<br/><b>task types</b><br/><br/>
-                  <span class="instruction-text-chapter-details">(e.g. home, computer,<br/>phone, errands etc.)</span>
-                </p>
-              </div>
-            </li>
-          </ul>
-          <h3 class="arrow-link">
-            <a href class="click-to-slide" swiper-click="showNoContextDetails()">
-              <span class="link-title">no context</span><span class="icon-arrow-right"></span>
-            </a>
-          </h3>
-          <h3 class="arrow-link">
-            <a href class="click-to-slide" swiper-click="showNoListTasksDetails()">
-              <span class="link-title">no list</span><span class="icon-arrow-right"></span>
-            </a>
-          </h3>
-          <h3 class="arrow-link">
-            <a href class="click-to-slide" swiper-click="showNoDateTasksDetails()">
-              <span class="link-title">no date</span><span class="icon-arrow-right"></span>
-            </a>
-          </h3>
-        </section>
+<section ng-init="newContext={title:undefined, tagType:'context'}" class="container-content" scroll-to swiper-prevent>
+  <h3>contexts</h3>
+  <ul>
+    <li ng-show="contexts.length" ng-repeat="context in contexts">
+      <a href class="click-to-slide" swiper-click="showContextDetails(context)">
+        <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
+      </a>
+    </li>
+    <li>
+      <form role="form" class="add-element" ng-submit="callAndRefresh(addContext, newContext)" add-item autocapitalize="none" autocorrect="off">
+        <div class="form-group" editable-field-container="disable">
+          <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" editable-field placeholder="add context..."/>
+        </div>
+      </form>
+    </li>
+    <li ng-if="contexts.length === 0">
+      <div class="instruction-text">
+        <p class="instruction-text-chapter">contexts are<br/><b>task types</b><br/><br/>
+          <span class="instruction-text-chapter-details">(e.g. home, computer,<br/>phone, errands etc.)</span>
+        </p>
       </div>
-    </div>
-  </div>
-  <aside class="column">
-    TODO
-  </aside>
+    </li>
+  </ul>
+  <h3 class="arrow-link">
+    <a href class="click-to-slide" swiper-click="showNoContextDetails()">
+      <span class="link-title">no context</span><span class="icon-arrow-right"></span>
+    </a>
+  </h3>
+  <h3 class="arrow-link">
+    <a href class="click-to-slide" swiper-click="showNoListTasksDetails()">
+      <span class="link-title">no list</span><span class="icon-arrow-right"></span>
+    </a>
+  </h3>
+  <h3 class="arrow-link">
+    <a href class="click-to-slide" swiper-click="showNoDateTasksDetails()">
+      <span class="link-title">no date</span><span class="icon-arrow-right"></span>
+    </a>
+  </h3>
 </section>
+<footer class="container-content--after">contexts</footer>
