--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -16,4 +16,4 @@
     </div>
   </div>
 </section>
-<footer class="container-content--after">footer</footer>
+<footer class="container-content--after">recent tasks</footer>
