--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,4 +1,4 @@
-<div ng-show="isFeatureActive('tasks')" class="swiper-container main-slides container-content--outer" swiper-container="tasks" swiper-type="main" expected-slides="(loading && 1) || (!loading && 3)">
+<div ng-show="isFeatureActive('tasks')" class="swiper-container container-content--outer" swiper-container="tasks" swiper-type="main" expected-slides="(loading && 1) || (!loading && 3)">
   <div class="swiper-wrapper">
     <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/recent.html'" drawer-handle="left"></div>
     <div ng-if="!loading" class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1 ng-include="'static/app/tasks/contexts.html'"></div>
