--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,34 +1,36 @@
 <div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize>
   <div ng-if="editorVisible" class="container-fluid">
     <header class="container-titlebar">
-      <div class="group-navigation">
-        <a href class="link-navigation-back row" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endEdit()" ng-bind="saveOnClose ? 'save' : 'back'"></a>
-      </div>
-      <form role="form" class="group-mixed" ng-submit="saveItemInEdit()" autocapitalize="none" autocorrect="off">
-        <div ng-if="itemTitleHasActionButton" class="group-mixed--left">
-          <input type="checkbox" ng-model="task.completed" icon-checkbox="editorTitlebarCheckbox" />
+      <div class="container-titlebar--inner">
+        <div class="group-navigation">
+          <a href class="link-navigation-back row" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endEdit()" ng-bind="saveOnClose ? 'save' : 'back'"></a>
         </div>
-        <div class="group-mixed--middle">
-          <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
-        </div>
-        <div ng-if="titlebarHasText()" class="group-mixed--right">
-          <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
-        </div>
-      </form>
+        <form role="form" class="group-mixed" ng-submit="saveItemInEdit()" autocapitalize="none" autocorrect="off">
+          <div ng-if="itemTitleHasActionButton" class="group-mixed--left">
+            <input type="checkbox" ng-model="task.completed" icon-checkbox="editorTitlebarCheckbox" />
+          </div>
+          <div class="group-mixed--middle">
+            <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
+          </div>
+          <div ng-if="titlebarHasText()" class="group-mixed--right">
+            <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
+          </div>
+        </form>
 
-      <div ng-if="editorType === 'item'" class="group-btn row">
-        <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('inbox')" ng-click="setItemEditorTabActive('inbox')">
-          <span class="text-btn">inbox</span>
-        </button>
-        <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('task')" ng-click="setItemEditorTabActive('task')">
-          <span class="text-btn">task</span>
-        </button>
-        <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('note')" ng-click="setItemEditorTabActive('note')">
-          <span class="text-btn">note</span>
-        </button>
-        <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('list')" ng-click="setItemEditorTabActive('list')">
-          <span class="text-btn">list</span>
-        </button>
+        <div ng-if="editorType === 'item'" class="group-btn row">
+          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('inbox')" ng-click="setItemEditorTabActive('inbox')">
+            <span class="text-btn">inbox</span>
+          </button>
+          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('task')" ng-click="setItemEditorTabActive('task')">
+            <span class="text-btn">task</span>
+          </button>
+          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('note')" ng-click="setItemEditorTabActive('note')">
+            <span class="text-btn">note</span>
+          </button>
+          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('list')" ng-click="setItemEditorTabActive('list')">
+            <span class="text-btn">list</span>
+          </button>
+        </div>
       </div>
     </header>
 
