Add verticalResizeDirective with id parameter to register unique window resized callback. Fixed .container master max-width transition overwrited earlier defined max-height transition.

--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -1,4 +1,4 @@
-<section id="entry" class="container-master" ng-controller="EntryController" vertical-resize>
+<section id="entry" class="container-master" ng-controller="EntryController" vertical-resize="entry">
   <div class="container-fluid">
 
     <header class="container-toolbar">
