--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,4 +1,4 @@
-<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize>
+<div class="container-editor" ng-controller="EditorController" data-snap-ignore="true" drawer="right" vertical-resize="editor">
   <div ng-if="editorVisible" class="container-fluid">
     <header class="container-titlebar">
       <div class="container-titlebar--inner">
